# AndroidUSBCamera

./: .gitignore  FAQ.md  README.md  README_ZH.md  VERSION.md  build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle  settings.gradle.kts
app/: .gitignore  build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle  build.gradle.kts
libausbc/libs/: libpush-3.1.1.aar  libusbcommon_v4.1.1.aar  libuvc-3.1.2.aar
libausbc/src/main/: AndroidManifest.xml
libmedia/: build.gradle
libmedia/libs/: libnative-3.1.1.aar  libuvc-3.1.1.aar
libmedia/src/main/: AndroidManifest.xml
libnative/: build.gradle  build.gradle.kts
libnative/aar/: libnative-3.2.9.aar
libnative/src/main/cpp/: CMakeLists.txt  nativelib.cpp
libnative/src/main/cpp/module/mp3/: mp3.cpp  mp3.h
libnative/src/main/cpp/module/mp3/lame/: VbrTag.c  fft.c  id3tag.c  machine.h  psymodel.c  util.h
libnative/src/main/cpp/module/yuv/: yuv.cpp  yuv.h
libnative/src/main/cpp/proxy/: proxy_mp3.cpp  proxy_mp3.h  proxy_yuv.cpp  proxy_yuv.h
libnative/src/main/cpp/utils/: logger.cpp  logger.h
libpush/: build.gradle
libusbcamera/: build.gradle  proguard-rules.pro
libutils/: build.gradle
libutils/aar/: libutils-3.2.9.aar
libuvc/: .gitignore  build.gradle  build.gradle.kts
libuvc/aar/: libuvc-3.2.9.aar
libuvc/src/main/jni/libuvc/android/jni/: CMakeLists.txt
libuvccommon/: build.gradle
libuvccommon/aar/: libuvccommon-3.2.9.aar
(+981 files in other folders)
